# mnist

./: ._mnist.cpp  ._mnist.onnx  .gitignore  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mnist.pro  mnist_siamese.ipynb
C++_mnist_inference/: main.cpp  mainwindow.h  mnist.onnx
Java_mnist_inference/src/: MNIST.java
Python_mnist_inference/cli/: CMakeLists.txt  mnist.cpp
Python_mnist_train/Mnist-Dataset/: mnist_test.rar
train/: MLP - Mnist.ipynb  README.md
